# Auqw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
auqw-bridge/: CMakeLists.txt
auqw-bridge/include/auqw/: CoreBridge.hpp  auqw_core.h
auqw-bridge/src/: CoreBridge.cpp
auqw-bridge/tests/: core_bridge_smoke.cpp
auqw-core/: build.zig
auqw-core/src/: api.zig  api_tests.zig  commands.zig  errors.zig  migrations.zig  models.zig  sqlite.zig  state.zig
auqw-core/src/commands/: cache.zig  core.zig  downloads.zig  json_helpers.zig  library.zig  playback.zig  queue.zig  responses.zig  tracks.zig
auqw-qt/: CMakeLists.txt
auqw-qt/android/: AndroidManifest.xml
auqw-qt/android/src/com/Vehicoule/auqw/: AuqwActivity.java  AuqwMediaSessionBridge.java  AuqwNativeAudioPlayer.java  AuqwPlaybackService.java
auqw-qt/qml/: Main.qml
auqw-qt/qml/components/: AlbumBackdrop.qml  AppTheme.qml  ArtworkTile.qml  GlassSurface.qml  PlayerControls.qml  qmldir
auqw-qt/src/: AndroidNativePlaybackBackend.cpp  AndroidPlaybackController.cpp  AndroidPlaybackController.hpp  ApplePlaybackBackend.mm  CoreController.cpp  CoreController.hpp  CoreControllerDownloads.cpp  CoreControllerLibrary.cpp  CoreControllerPlayback.cpp  CoreControllerSearch.cpp  DesktopPlatformController.cpp  DesktopPlatformController.hpp  DownloadWorker.cpp  DownloadWorker.hpp  InnertubeProvider.cpp  InnertubeProvider.hpp  InnertubeProviderParsing.cpp  IosPlaybackController.hpp  IosPlaybackController.mm  JsonListModel.cpp  JsonListModel.hpp  OnlinePlaybackStreamSelection.cpp  OnlinePlaybackStreamSelection.hpp  OnlineProvider.cpp  OnlineProvider.hpp  PlaybackBackend.cpp  PlaybackBackend.hpp  YoutubeHttpAudioDevice.cpp  YoutubeHttpAudioDevice.hpp  YoutubePlaybackResolver.cpp  YoutubePlaybackResolver.hpp  YoutubePlaybackResolverParsing.cpp  YoutubeSabrAudioDevice.cpp  YoutubeSabrAudioDevice.hpp  YoutubeSabrSession.cpp  YoutubeSabrSession.hpp  YoutubeSabrTypes.hpp  YoutubeStreamBuffer.hpp  YoutubeUmpParser.cpp  YoutubeUmpParser.hpp  (+1 more)
auqw-qt/tests/: android_platform_package_test.cpp  core_controller_test.cpp  desktop_platform_controller_test.cpp  ios_platform_wiring_test.cpp  online_provider_test.cpp  platform_package_test.cpp  qml_shell_smoke_test.cpp  test_storage.hpp  youtube_sabr_live_smoke.cpp
ci/: android-build.sh  android-runtime-smoke.sh  build-local.sh  check-freebsd-runtime.sh  check-linux-runtime.sh  container-build.ps1  container-build.sh  deploy-linux-runtime.sh  ios-build.sh  ios-runtime-smoke.sh  linux-package.sh  live-playback-soak.sh  live-youtube-direct-smoke.sh  macos-build.sh  platform-builds.md  windows-build.ps1  zig-cxx-wrapper.sh
containers/: README.md
containers/android-linux/: Containerfile
containers/ios/: Brewfile  README.md
containers/linux-flatpak/: Containerfile
containers/macos/: Brewfile  README.md
containers/windows/: Containerfile
docs/: PLAN.md  architecture.md
packaging/ghcr/: release-index.Containerfile
packaging/linux/: com.Vehicoule.auqw.desktop  com.vehicoule.auqw.desktop  com.vehicoule.auqw.metainfo.xml  com.vehicoule.auqw.yml
